--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
 	<title>Fitnesso</title>
@@ -74,9 +74,9 @@
 
 					<div class="sandra__info">
 						<div class="sandra__hi">Hi i'm Sandra Lyons</div>
-						<div class="sandra__label">
+						<h2 class="sandra__label">
 							Your go to online fitness trainer and nutritionist.
-						</div>
+						</h2>
 						<div class="sandra__text">
 							After getting a bachelors in nutrition and fitness training I started working with people all
 							around and changing their lives forever.
@@ -271,12 +271,12 @@
 							</h3>
 							<a class="item-free__train" href="#"><span>View</span></a>
 						</article>
-						<article class="free__item item-free"">
+						<article class="free__item item-free">
 							<a href=" #" class="item-free__img">
-							<picture>
-								<source srcset="img/free/free3.webp" type="image/webp"><img class="item-free__image"
-									src="img/free/free3.jpg" alt="">
-							</picture>
+								<picture>
+									<source srcset="img/free/free3.webp" type="image/webp"><img class="item-free__image"
+										src="img/free/free3.jpg" alt="">
+								</picture>
 							</a>
 							<div class="item-free__blok-time">
 								<span class="item-free__time">7 Days a Week</span>
